--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "test": "jest"
   },
-  "dependencies": { "parcel-bundler": "^1.6.1" },
+  "dependencies": { "parcel-bundler": "^1.6.1", "jest": "29.5.0" },
   "devDependencies": {
     "@babel/core": "7.2.0",
     "typescript": "4.4.4"
