--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
     "build": "parcel build index.html",
     "test": "jest"
   },
-  "dependencies": { "parcel-bundler": "^1.6.1", "jest": "29.5.0" },
+  "dependencies": {
+    "jest": "29.5.0",
+    "parcel-bundler": "^1.6.1"
+  },
   "devDependencies": {
     "@babel/core": "7.2.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "typescript": "4.4.4"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
   },
-  "keywords": ["javascript", "starter"]
+  "keywords": [
+    "javascript",
+    "starter"
+  ]
 }
